--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,8 @@ $colors: (
   secondary:  #32db64,
   danger:     #CC4125,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  details:    #ffa489
 );
 
 
