--- a/platforms/android/app/src/main/res/xml/config.xml
+++ b/platforms/android/app/src/main/res/xml/config.xml
@@ -85,7 +85,7 @@
     <name>MyApp</name>
     <description>An awesome Ionic/Cordova app.</description>
     <author email="hi@ionicframework" href="http://ionicframework.com/">Ionic Framework Team</author>
-    <content original-src="index.html" src="http://192.168.0.103:8100" />
+    <content original-src="index.html" src="http://192.168.1.99:8100" />
     <access origin="*" />
     <allow-intent href="http://*/*" />
     <allow-intent href="https://*/*" />
@@ -99,6 +99,8 @@
     <allow-navigation href="http://192.168.1.114:8100" />
     <allow-navigation href="http://192.168.1.189:8100" />
     <allow-navigation href="http://192.168.0.103:8100" />
+    <allow-navigation href="http://192.168.1.99:8100" />
+    <allow-navigation href="http://192.168.2.4:8100" />
     <config-file parent="/resources" target="./res/values/strings.xml">
         <string name="fb_app_id">2107678939508903</string>
         <string name="fb_app_name">APPGasolineras</string>
